fix cost preview alignment

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -75,3 +75,7 @@ body {
 .form-group {
     margin-left: 20px;
 }
+
+.cost {
+    margin-bottom: .5rem;
+}
